@@ -94,7 +94,7 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
                     id=hairdo
                     [effect]
                         apply_to=image_mod
-                        add="RC(FFDC02,EA9752,C4793A,C35029,6B2C29,A34C29,D5561F,343424,353624,BF5746=BCBCBC,7D7D7D,5E5E5E,434343,232323,3B3B3B,494949,232323,232323,484848)"
+                        add="PAL(FFDC02,EA9752,C4793A,C35029,6B2C29,A34C29,D5561F,343424,353624,BF5746 > BCBCBC,7D7D7D,5E5E5E,434343,232323,3B3B3B,494949,232323,232323,484848)"
                     [/effect]
                 [/trait]
             [/modifications]
